--- a/.github/workflows/myCI.yml
+++ b/.github/workflows/myCI.yml
@@ -25,8 +25,8 @@ jobs:
       uses: actions/setup-java@v2
       with:
         java-version: '11'
-#        distribution: 'temurin'
-#        cache: maven
+        distribution: 'temurin'
+        cache: maven
     - name: Build with Maven
       run: mvn -B package --file pom.xml
     - name: Run tests with Maven
