--- a/.github/workflows/myCI.yml
+++ b/.github/workflows/myCI.yml
@@ -17,7 +17,8 @@ on:
 jobs:
   build-and-test:
 
-    runs-on: ubuntu-latest
+ #   runs-on: ubuntu-latest
+    runs-on: macOS-latest
 
     steps:
     - uses: actions/checkout@v3
